Rollback CSS Fix for ChosenSelect overflow
Causes issues with List overflow-y scrollbar

--- a/assets/themes/WPadmin/css/stylesheet.css
+++ b/assets/themes/WPadmin/css/stylesheet.css
@@ -368,10 +368,6 @@ select,
 
 .list-wrapper {
 	overflow-x: auto;
-	/* Fix for ChosenSelect overflow
-	@link https://github.com/harvesthq/chosen/issues/86#issuecomment-410044171 */
-	padding-bottom: 400px;
-	margin-bottom: -400px;
 }
 
 .list-nav,
